Include strings.h for strcasecmp(), strncasecmp(), and bzero(). Include time.h for time().
This removes a bunch of compiler warnings with gcc -Wall on AIX.
Submitted by:	Jeff Trawick, Victor Orlikowski


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60276 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -257,6 +257,7 @@ AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
 AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh"0")
 AC_CHECK_HEADERS(stdlib.h)
 AC_CHECK_HEADERS(string.h)
+AC_CHECK_HEADERS(strings.h)
 AC_CHECK_HEADERS(sysapi.h)
 AC_CHECK_HEADERS(sysgtime.h)
 AC_CHECK_HEADERS(termios.h)
