Somebody forgot to change an occurrence of have_bcopy to have_bzero :)
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60277 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -230,7 +230,7 @@ AC_SUBST(have_sigaction)
 AC_SUBST(iconv)
 AC_SUBST(mmap)
 AC_SUBST(have_memmove)
-AC_SUBST(have_bcopy)
+AC_SUBST(have_bzero)
 
 dnl #----------------------------- Checks for Any required Headers
 AC_HEADER_STDC
