Finish the Configuration cleanup.  This basically merges all of the autoconf scripts that APR provides for other programs into apr_common.m4. Other programs can then just include that file to get the APR checks that are required. Submitted by:	Sascha Schumann <sascha@schumann.cx>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60279 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ dnl ## Autoconf configuration file for APR
 dnl ##
 
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(threads.m4)
+AC_INIT(apr_common.m4)
 AC_CONFIG_HEADER(include/apr_private.h)
 AC_CONFIG_AUX_DIR_DEFAULT
 
