Put in a hack to allow us to over-ride the APR_OFF_T_FMT and APR_SSIZE_T_FMT definitions.  I tried to use AC_TRY_COMPILE, but autoconf doesn't consider warnings failures to compile.  So, no matter how I wrote my test program, it generated a warning, and autoconf said it succeeded.  :-(
The code I am committing only sets the off_t fmt variable.  Let's just use
the same case statement for the ssize_t as well.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60283 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -380,6 +380,15 @@ else
     off_t_fmt='#error Can not determine the proper size for off_t'
 fi
 
+# basically, we have tried to figure out the sizes of ap_ssize_t and
+# ap_off_t, but we don't always get it right.  If you find that we
+# don't get it right for your platform, you can override our decision
+# below.
+case "$OS" in
+   *linux*)
+       off_t_fmt='#define APR_OFF_T_FMT "ld"'
+esac
+
 AC_SUBST(short_value)
 AC_SUBST(int_value)
 AC_SUBST(long_value)
