--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -49,19 +49,17 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-common.o: common.c mmap_h.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_mmap.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_lock.h \
+common.o: common.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_mmap.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
+mmap.o: mmap.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_mmap.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h
-mmap.o: mmap.c mmap_h.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_mmap.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_lock.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
