Update dependancies in APR
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60315 13f79535-47bb-0310-9956-ffa450edef68

--- a/i18n/unix/Makefile.in
+++ b/i18n/unix/Makefile.in
@@ -38,7 +38,8 @@ depend:
 
 # DO NOT REMOVE
 xlate.o: xlate.c $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_xlate.h
+ $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_xlate.h
