--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -53,42 +53,39 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-proc.o: proc.c threadproc.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h
-procsup.o: procsup.c threadproc.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h
-signals.o: signals.c threadproc.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h
-thread.o: thread.c threadproc.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h
-threadcancel.o: threadcancel.c threadproc.h \
+proc.o: proc.c threadproc.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_tables.h
-threadpriv.o: threadpriv.c threadproc.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
+procsup.o: procsup.c threadproc.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
+signals.o: signals.c threadproc.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
+thread.o: thread.c $(INCDIR)/apr.h $(INCDIR)/apr_portable.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h threadproc.h \
+ $(INCDIR)/apr_private.h ../../file_io/unix/fileio.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_tables.h
+threadpriv.o: threadpriv.c $(INCDIR)/apr.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_dso.h threadproc.h $(INCDIR)/apr_private.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
