--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -81,6 +81,12 @@ thread.o: thread.c $(INCDIR)/apr.h $(INCDIR)/apr_portable.h \
  $(INCDIR)/apr_private.h ../../file_io/unix/fileio.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_tables.h
+threadcancel.o: threadcancel.c threadproc.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
+ ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
 threadpriv.o: threadpriv.c $(INCDIR)/apr.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
