--- a/configure.in
+++ b/configure.in
@@ -678,8 +678,8 @@ AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
 
 echo "Construct Makefiles and header files."
-MAKEFILE1="Makefile lib/Makefile "
-SUBDIRS="lib "
+MAKEFILE1="Makefile lib/Makefile buckets/Makefile"
+SUBDIRS="lib buckets"
 for dir in $MODULES
 do
     test -d $dir || $MKDIR -p $dir
