Back-out premature config changes for buckets.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60344 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -678,8 +678,8 @@ AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
 
 echo "Construct Makefiles and header files."
-MAKEFILE1="Makefile lib/Makefile buckets/Makefile"
-SUBDIRS="lib buckets"
+MAKEFILE1="Makefile lib/Makefile "
+SUBDIRS="lib "
 for dir in $MODULES
 do
     test -d $dir || $MKDIR -p $dir
