Remove unnecessary INCDIR1 Submitted by:	Dave Hill <ddhill@laurel.zk3.dec.com> Reviewed by:	Ryan Bloom
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60360 13f79535-47bb-0310-9956-ffa450edef68

--- a/dso/unix/Makefile.in
+++ b/dso/unix/Makefile.in
@@ -10,7 +10,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCLUDES=-I$(INCDIR) -I.
 
 LIB=libdso.a
 
