--- a/configure.in
+++ b/configure.in
@@ -385,7 +385,7 @@ fi
 # don't get it right for your platform, you can override our decision
 # below.
 case "$OS" in
-   *linux*)
+   *linux* | *os2_emx)
        off_t_fmt='#define APR_OFF_T_FMT "ld"'
 esac
 
