Allow APR to build without Apache.  buildconf builds the configure scripts for APR and MM.  Config.guess and Config.sub have been moved to helpers/
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60373 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ dnl ##
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(apr_common.m4)
 AC_CONFIG_HEADER(include/apr_private.h)
-AC_CONFIG_AUX_DIR_DEFAULT
+AC_CONFIG_AUX_DIR(helpers)
 
 echo "Configuring APR library"
 OS=`$ac_config_guess`
