--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -18,6 +18,7 @@ OBJS=dir.o \
 	fileacc.o \
 	filedup.o \
 	filestat.o \
+	fullrw.o \
 	open.o \
 	pipe.o \
 	readwrite.o \
@@ -82,6 +83,9 @@ filestat.o: filestat.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_tables.h
+fullrw.o: fullrw.c $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h
 open.o: open.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
