Remove warnings on Tru64 Unix.  Basically, long and long long are the same size on Tru64, so if we use long long we get a lot of warnings.  This just cleans those up. Submitted by:   Dave Hill <ddhill@laurel.zk3.dec.com> Reviewed by:    Ryan Bloom
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60379 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -336,7 +336,11 @@ if test "$ac_cv_sizeof_long_double" = "8"; then
     long_value="long double"
 fi
 if test "$ac_cv_sizeof_long_long" = "8"; then
-    long_value="long long"
+    if test "$ac_cv_sizeof_long_long" = "$ac_cv_sizeof_long"; then
+        long_value="long"
+    else
+        long_value="long long"
+    fi
 fi
 if test "$ac_cv_sizeof_longlong" = "8"; then
     long_value="__int64"
