Move all APR functions related to strings to their own directory, and create a new header for those functions.  This is the first step to removing the apr/lib directory completely, and moving those files/functions to descriptive directories.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60398 13f79535-47bb-0310-9956-ffa450edef68

--- a/strings/Makefile.in
+++ b/strings/Makefile.in
@@ -16,14 +16,10 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 
 #LIB=@LIBPREFIX@apr.a
 
-OBJS=apr_fnmatch.o \
-	apr_execve.o \
-	apr_md5.o \
-	apr_pools.o \
-	apr_signal.o \
-	apr_tables.o \
-	apr_hash.o \
-	apr_getpass.o
+OBJS=apr_cpystrn.o \
+	apr_snprintf.o \
+	apr_strnatcmp.o \
+	apr_strings.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
