Move apr_fnmatch.c from lib/apr/lib to lib/apr/strings.  Just the next move to clean out the lib/apr/lib directory.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60399 13f79535-47bb-0310-9956-ffa450edef68

--- a/strings/Makefile.in
+++ b/strings/Makefile.in
@@ -19,7 +19,8 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 OBJS=apr_cpystrn.o \
 	apr_snprintf.o \
 	apr_strnatcmp.o \
-	apr_strings.o
+	apr_strings.o \
+	apr_fnmatch.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
