--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -16,8 +16,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 
 #LIB=@LIBPREFIX@apr.a
 
-OBJS=apr_fnmatch.o \
-	apr_execve.o \
+OBJS=apr_execve.o \
 	apr_md5.o \
 	apr_pools.o \
 	apr_signal.o \
