Remove all of the ap_exec* functions.  Nobody is currently using these functions, and since we don't really have a fork function in APR, I'm not sure having exec functions makes sense.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60402 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -16,8 +16,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 
 #LIB=@LIBPREFIX@apr.a
 
-OBJS=apr_execve.o \
-	apr_md5.o \
+OBJS=apr_md5.o \
 	apr_pools.o \
 	apr_signal.o \
 	apr_tables.o \
