Tweak setting of APR_OFF_T_FMT for Solaris (pc, not sparc).
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60403 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -389,7 +389,7 @@ fi
 # don't get it right for your platform, you can override our decision
 # below.
 case "$OS" in
-   *linux* | *os2_emx)
+   *linux* | *os2_emx | *-pc-solaris*)
        off_t_fmt='#define APR_OFF_T_FMT "ld"'
 esac
 
