--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -72,7 +72,8 @@ sockaddr.o: sockaddr.c networkio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_strings.h
 sockets.o: sockets.c networkio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
@@ -86,4 +87,5 @@ sockopt.o: sockopt.c networkio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_strings.h
