--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -61,22 +61,23 @@ dir.o: dir.c fileio.h $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
-fileacc.o: fileacc.c fileio.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_strings.h $(INCDIR)/apr_portable.h \
+ $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_dso.h
+fileacc.o: fileacc.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h fileio.h \
+ $(INCDIR)/apr_private.h
 filedup.o: filedup.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_strings.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
 filestat.o: filestat.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
@@ -91,15 +92,15 @@ open.o: open.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_strings.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
 pipe.o: pipe.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_strings.h
 readwrite.o: readwrite.c fileio.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_file_io.h \
