--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -51,12 +51,13 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-crossproc.o: crossproc.c ../../include/apr.h locks.h \
- ../../include/apr_private.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../include/apr_lib.h \
+crossproc.o: crossproc.c ../../include/apr.h \
+ ../../include/apr_strings.h ../../include/apr_lib.h \
  ../../include/apr_pools.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_time.h \
- ../../include/apr_tables.h ../../include/apr_lock.h
+ ../../include/apr_file_io.h ../../include/apr_general.h \
+ ../../include/apr_errno.h ../../include/apr_time.h \
+ ../../include/apr_tables.h locks.h ../../include/apr_private.h \
+ ../../include/apr_lock.h
 intraproc.o: intraproc.c locks.h ../../include/apr.h \
  ../../include/apr_private.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
@@ -69,5 +70,5 @@ locks.o: locks.c locks.h ../../include/apr.h \
  ../../include/apr_pools.h ../../include/apr_thread_proc.h \
  ../../include/apr_file_io.h ../../include/apr_time.h \
  ../../include/apr_tables.h ../../include/apr_lock.h \
- ../../include/apr_portable.h ../../include/apr_network_io.h \
- ../../include/apr_dso.h
+ ../../include/apr_strings.h ../../include/apr_portable.h \
+ ../../include/apr_network_io.h ../../include/apr_dso.h
