--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -61,8 +61,8 @@ errorcodes.o: errorcodes.c misc.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
  ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_getopt.h \
- ../../include/apr_lib.h ../../include/apr_tables.h \
- ../../include/apr_dso.h
+ ../../include/apr_strings.h ../../include/apr_lib.h \
+ ../../include/apr_tables.h ../../include/apr_dso.h
 getopt.o: getopt.c misc.h ../../include/apr.h \
  ../../include/apr_private.h ../../include/apr_general.h \
  ../../include/apr_errno.h ../../include/apr_pools.h \
@@ -86,4 +86,5 @@ start.o: start.c misc.h ../../include/apr.h \
  ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
  ../../include/apr_time.h ../../include/apr_getopt.h \
  ../../locks/unix/locks.h ../../include/apr_lib.h \
- ../../include/apr_tables.h ../../include/apr_lock.h
+ ../../include/apr_tables.h ../../include/apr_lock.h \
+ ../../include/apr_strings.h
