--- a/strings/Makefile.in
+++ b/strings/Makefile.in
@@ -54,53 +54,25 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+apr_cpystrn.o: apr_cpystrn.c $(INCDIR)/apr.h $(INCDIR)/apr_strings.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h
-apr_execve.o: apr_execve.c $(INCDIR)/apr_private.h
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_private.h
 apr_fnmatch.o: apr_fnmatch.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_fnmatch.h $(INCDIR)/apr_errno.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_tables.h
-apr_getpass.o: apr_getpass.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h
-apr_hash.o: apr_hash.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h $(INCDIR)/apr_hash.h
-apr_md5.o: apr_md5.c $(INCDIR)/apr_private.h $(INCDIR)/apr_md5.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_xlate.h
-apr_pools.o: apr_pools.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h $(INCDIR)/apr_pools.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_tables.h ../misc/unix/misc.h $(INCDIR)/apr_getopt.h
-apr_signal.o: apr_signal.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h
 apr_snprintf.o: apr_snprintf.c $(INCDIR)/apr.h \
  $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_tables.h
+apr_strings.o: apr_strings.c $(INCDIR)/apr.h $(INCDIR)/apr_strings.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_private.h
 apr_strnatcmp.o: apr_strnatcmp.c $(INCDIR)/apr_strnatcmp.h
-apr_tables.o: apr_tables.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_lib.h ../misc/unix/misc.h \
- $(INCDIR)/apr_getopt.h
