Add a rule to make the docs from APR's header files.  And add a .cvsignore so that those generated html pages are ignored by CVS.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60432 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -98,5 +98,9 @@ subdirs_distclean:
 	done;
 
 install: all
+
+docs:
+	./helpers/scandoc -i./helpers/default.pl -p./docs/ ./include/*.h
 	
 # DO NOT REMOVE
+docs: $(INCDIR)/*.h
