--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -16,12 +16,10 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 
 #LIB=@LIBPREFIX@apr.a
 
-OBJS=apr_md5.o \
-	apr_pools.o \
+OBJS=apr_pools.o \
 	apr_signal.o \
 	apr_tables.o \
-	apr_hash.o \
-	apr_getpass.o
+	apr_hash.o 
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -55,20 +53,10 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-apr_getpass.o: apr_getpass.c $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_strings.h $(INCDIR)/apr.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h
 apr_hash.o: apr_hash.c $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h $(INCDIR)/apr_hash.h
-apr_md5.o: apr_md5.c $(INCDIR)/apr_private.h $(INCDIR)/apr_strings.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h $(INCDIR)/apr_md5.h $(INCDIR)/apr_xlate.h
 apr_pools.o: apr_pools.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
