--- a/configure.in
+++ b/configure.in
@@ -682,8 +682,8 @@ AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
 
 echo "Construct Makefiles and header files."
-MAKEFILE1="Makefile lib/Makefile strings/Makefile"
-SUBDIRS="lib strings "
+MAKEFILE1="Makefile lib/Makefile strings/Makefile passwd/Makefile"
+SUBDIRS="lib strings passwd "
 for dir in $MODULES
 do
     test -d $dir || $MKDIR -p $dir
