--- a/tables/Makefile.in
+++ b/tables/Makefile.in
@@ -14,9 +14,8 @@ INCDIR=../include
 INCDIR1=../misc/@OSDIR@
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
 
-#LIB=@LIBPREFIX@apr.a
-
-OBJS=apr_pools.o
+OBJS=apr_tables.o \
+	apr_hash.o 
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
@@ -50,11 +49,13 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-apr_pools.o: apr_pools.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
+apr_hash.o: apr_hash.c $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h $(INCDIR)/apr_hash.h
+apr_tables.o: apr_tables.c $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h $(INCDIR)/apr_strings.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h ../misc/unix/misc.h \
- $(INCDIR)/apr_getopt.h
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_strings.h $(INCDIR)/apr_lib.h \
+ ../misc/unix/misc.h $(INCDIR)/apr_getopt.h
