--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -132,6 +132,9 @@ typedef  @off_t_value@           ap_off_t;
 /* And APR_OFF_T_FMT */
 @off_t_fmt@
 
+/* Local machine definition for console and log output. */
+#define APR_EOL_STR              "\n"
+
 /* Define ap_signal and related necessary definitions.
  */
 /* We are checking for HAVE_SIGACTION, but autoconf is filling this in 
