Remove all of the ap_is* functions from Apache.  They were already in APR, and we all hate duplicate code.  :-)  This also required adding ap_isascii to APR.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60454 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -24,6 +24,7 @@
 #define ENUM_BITFIELD(e,n,w)  e n : w
 #endif
 
+#define APR_HAVE_CTYPE_H        @ctypeh@
 #define APR_HAVE_ERRNO_H        @errnoh@
 #define APR_HAVE_DIRENT_H       @direnth@
 #define APR_HAVE_FCNTL_H        @fcntlh@
