--- a/configure.in
+++ b/configure.in
@@ -238,7 +238,7 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(ByteOrder.h)
 AC_CHECK_HEADERS(conio.h)
 AC_CHECK_HEADERS(crypt.h)
-AC_CHECK_HEADERS(ctype.h)
+AC_CHECK_HEADERS(ctype.h, ctypeh="1", ctypeh="0")
 AC_CHECK_HEADERS(dir.h)
 AC_CHECK_HEADERS(dirent.h, direnth="1", dirent="0")
 AC_CHECK_HEADERS(errno.h, errnoh="1", errnoh="0")
@@ -290,6 +290,7 @@ AC_CHECK_HEADERS(dl.h)
 
 AC_CHECK_HEADERS(kernel/OS.h)
 
+AC_SUBST(ctypeh)
 AC_SUBST(errnoh)
 AC_SUBST(direnth)
 AC_SUBST(fcntlh)
