--- a/configure.in
+++ b/configure.in
@@ -105,6 +105,12 @@ case "$OS" in
        AC_CHECK_DEFINE(BONE_VERSION, sys/socket.h)
        eolstr="\\n"
        ;;
+   *os390)
+       OSDIR="os390"
+       config_subdirs="shmem/unix/mm"
+       USE_MM=yes
+       eolstr="\\n"
+       ;;
    *)
        OSDIR="unix"
        config_subdirs="shmem/unix/mm"
@@ -436,6 +442,13 @@ AC_ARG_ENABLE(dso,
     fi
      if test "$tempdso" = "no"; then
         AC_CHECK_LIB(root, load_image, tempdso="yes", tempdso="no")
+    fi
+    if test "$tempdso" = "no"; then
+        case $OS in
+            *os390)
+                tempdso="yes"
+                ;;
+        esac
     fi
  ] )
 
