Allow dso builds with pthreads enabled to work on platforms which don't have pthread_key_delete (e.g. OS/390).  apr_delete_thread_private is currently unused.  If/when somebody tries to use apr_delete_thread_private on such a platform, the build will fail and we can deal with the missing OS function then.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60517 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -509,6 +509,7 @@ fi
 if test "$pthreadh" = "1"; then
     APR_CHECK_PTHREAD_GETSPECIFIC_TWO_ARGS
     APR_CHECK_PTHREAD_ATTR_GETDETACHSTATE_ONE_ARG
+    AC_CHECK_FUNCS(pthread_key_delete);
 fi
 
 ac_cv_define_READDIR_IS_THREAD_SAFE=no
