Current implementation of lib/apr/Makefile.in causes rebuilding libapr.a at "make install" stage even if libapr.a is up to date after "make all" stage.
It seems this patch is required to fix that behavior.
Submitted by:	Jun Kuriyama <kuriyama@imgsrc.co.jp>
Reviewed by:	Jeff Trawick


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60519 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,7 +42,9 @@ LIBAPR = @LIBPREFIX@apr.a
 #
 all: Makefile $(LIBAPR)
 
-$(LIBAPR): $(MODULES) subdirs
+$(MODULES): subdirs
+
+$(LIBAPR): $(MODULES)
 	@rm -rf objs
 	@mkdir objs
 	@rm -f $@
