--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -58,3 +58,8 @@ apr_pools.o: apr_pools.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_dso.h $(INCDIR)/apr_strings.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h ../misc/unix/misc.h \
  $(INCDIR)/apr_getopt.h
+apr_signal.o: apr_signal.c $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_tables.h
