Back out previous change, which attempted to minimize rebuilding libapr.a.  Unfortunately, libapr.a didn't get built at all times when it needed to be built (e.g., normal APR source file modification).
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60528 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,9 +42,7 @@ LIBAPR = @LIBPREFIX@apr.a
 #
 all: Makefile $(LIBAPR)
 
-$(MODULES): subdirs
-
-$(LIBAPR): $(MODULES)
+$(LIBAPR): $(MODULES) subdirs
 	@rm -rf objs
 	@mkdir objs
 	@rm -f $@
