Some systems have poll.h in include/sys, not include.  I found this problem on non-glibc linux machines.  This patch solves the problem.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60540 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -283,6 +283,7 @@ AC_CHECK_HEADERS(tpfio.h)
 AC_CHECK_HEADERS(sys/uio.h, sys_uioh="1", sys_uioh="0")
 AC_CHECK_HEADERS(unistd.h)
 AC_CHECK_HEADERS(poll.h)
+AC_CHECK_HEADERS(sys/poll.h)
 AC_CHECK_HEADERS(unix.h)
 AC_CHECK_HEADERS(arpa/inet.h)
 AC_CHECK_HEADERS(netinet/in.h, netinet_inh="1", netinet_inh="0")
