Add to the check for POLLIN.  If poll.h is found in include/sys not include, then we need to check for POLLIN in include/sys/poll.h.  Rather than modify an existing test, I have created a new test to look for a definition in multiple header files.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60541 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -598,7 +598,9 @@ AC_CHECK_DEFINE(CODESET, langinfo.h)
 AC_CHECK_DEFINE(isascii, ctype.h)
 # We are assuming that if the platform doesn't have POLLIN, it doesn't have
 # any POLL definitions.
-AC_CHECK_DEFINE(POLLIN, poll.h)
+AC_CHECK_DEFINE_FILES(POLLIN, [
+#include <poll.h>
+#include <sys/poll.h> ] )
 
 pthreadser="0"
 if test "$threads" = "1"; then
