--- a/configure.in
+++ b/configure.in
@@ -551,7 +551,7 @@ AC_ARG_ENABLE(other-child,
   
 AC_SUBST(oc) 
 
-AC_MSG_CHECKING(struct rlimit)
+AC_CACHE_CHECK(struct rlimit,ac_cv_struct_rlimit,[
 AC_TRY_RUN([
 #include <sys/types.h>
 #include <sys/time.h>
@@ -563,13 +563,11 @@ main()
     limit.rlim_max = 0;
     exit(0);
 }], [
-    struct_rlimit="1"
-    AC_MSG_RESULT(yes) ], [
-    struct_rlimit="0"
-    AC_MSG_RESULT(no) ], [
-    struct_rlimit="0"
-    AC_MSG_RESULT(no) ] )
-
+    ac_cv_struct_rlimit=yes ], [
+    ac_cv_struct_rlimit=no ], [
+    ac_cv_struct_rlimit=no ] ) ] )
+struct_rlimit=0
+test "x$ac_cv_struct_rlimit" = xyes && struct_rlimit=1
 AC_SUBST(struct_rlimit)
 
 dnl #----------------------------- Checking for Locking Characteristics 
