--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -17,7 +17,8 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I$(INCDIR3) -I$(INCDIR4) -I.
 
 #LIB=libmisc.a
 
-OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o canonerr.o
+OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o canonerr.o \
+	uuid.c getuuid.c
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
