doc nit and I missed a change to Makefile.in.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60560 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -18,7 +18,7 @@ INCLUDES=-I$(INCDIR1) -I$(INCDIR2) -I$(INCDIR3) -I$(INCDIR4) -I.
 #LIB=libmisc.a
 
 OBJS=start.o getopt.o otherchild.o errorcodes.o rand.o canonerr.o \
-	uuid.c getuuid.c
+	uuid.o getuuid.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
