If we determine that a platform does not have DSO support, then it makes no sense to try to build DSO support.  This changes stops us from doing that. PR:	6436
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60563 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -35,7 +35,7 @@ fi
 # These added to allow default directories to be used...
 DEFAULT_OSDIR="unix"
 echo "(Default will be ${DEFAULT_OSDIR})"
-MODULES="file_io network_io threadproc misc locks time mmap shmem dso i18n"
+MODULES="file_io network_io threadproc misc locks time mmap shmem i18n"
 
 # Most platforms use a prefix of 'lib' on their library files.
 LIBPREFIX='lib'
@@ -468,6 +468,7 @@ if test "$tempdso" = "no"; then
     aprdso="0"
 else
     aprdso="1"
+    MODULES="$MODULES dso"
 fi
 
 AC_SUBST(aprdso)
