Take Greg's criticism very literally.  EXPORT (when it's really IMPORT)   is a true Lewis Carrollism.  This patch replaces the following:
    APR_EXPORT()        -> APR_DECLARE()         This is a public fn
    APR_EXPORT_NONSTD() -> APR_DECLARE_NONSTD()  This is a varargs fn
    APR_VAR_EXPORT      -> APR_DECLARE_DATA      These are public vars
    APR_VAR_IMPORT      -> APR_DECLARE_DATA      ditto

    APR_EXPORT_SYMBOLS  -> APR_DECLARE_EXPORT    Compile the lib to export
    APR_STATIC          -> APR_DECLARE_STATIC    Compile:linked to the .lib
    no define                                    Compile:linked to the .dll

  The old symbols are retained in-place.  I will wait for the firestorm
  of controversy to die before we actually use these symbols in the APR,
  or will back out the new names under CtR

Submitted by:  Greg Stein
Reviewed by:   William Rowe


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60576 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -123,10 +123,21 @@ typedef  @socklen_t_value@       apr_socklen_t;
 /* Definitions that APR programs need to work properly. */
 
 #define APR_THREAD_FUNC
-#define APR_EXPORT(type)         type
-#define APR_EXPORT_NONSTD(type)  type
-#define APR_VAR_IMPORT           extern
-#define APR_VAR_EXPORT
+
+/* Create a set of APR_DECLARE(type), APR_DECLARE_NONSTD(type) and 
+ * APR_DECLARE_DATA with appropriate export and import tags for the platform.
+ * Simple case - see apr.hw for the complex example
+ */
+#define APR_DECLARE(type)            type
+#define APR_DECLARE_NONSTD(type)     type
+#define APR_DECLARE_DATA
+
+/* These need to move into apr_compat.h when the symbol rename is complete 
+ */
+#define APR_EXPORT(t)         APR_DECLARE(t)
+#define APR_EXPORT_NONSTD(t)  APR_DECLARE_NONSTD(t)
+#define APR_VAR_EXPORT        APR_DECLARE_DATA
+#define APR_VAR_IMPORT        APR_DECLARE_DATA
 
 /* Define APR_SSIZE_T_FMT.  
  * If ssize_t is an integer we define it to be "d",
