--- a/configure.in
+++ b/configure.in
@@ -495,12 +495,15 @@ else
       CHECK_PTHREADS_H([
           threads="1"
           pthreadh="1"
+          pthreadser="0"
           AC_DEFINE(USE_THREADS) ], [
           threads="0"
-          pthreadh="0" ] )
+          pthreadh="0"
+          pthreadser="0" ] )
     elif test "$enable_apr_threads" = "system_threads"; then
         threads="1"
         pthreadh="0"
+        pthreadser="0"
     else
 # We basically specified that we wanted threads, but not how to implement
 # them.  In this case, just look for pthreads.  In the future, we can check
@@ -509,8 +512,10 @@ else
       CHECK_PTHREADS_H([
           threads="1"
           pthreadh="1"
+          pthreadser="1"
           AC_DEFINE(USE_THREADS) ], [
           threads="0"
+          pthreadser="0"
           pthreadh="0" ] )
     fi
 fi
@@ -599,13 +604,6 @@ AC_CHECK_DEFINE(isascii, ctype.h)
 # any POLL definitions.
 AC_CHECK_DEFINE_FILES(POLLIN, poll.h sys/poll.h)
 
-pthreadser="0"
-if test "$threads" = "1"; then
-    AC_CHECK_DEFINE(PTHREAD_PROCESS_SHARED, pthread.h)
-    AC_CHECK_FUNC(pthread_mutex_init, [
-        AC_DEFINE(USE_PTHREAD_SERIALIZE)
-        pthreadser="1" ])
-fi
 AC_BEGIN_DECISION([ap_lock implementation method])
 AC_IFALLYES(custom:union_semun,
             AC_DECIDE(USE_SYSVSEM_SERIALIZE, [SysV IPC semget()]))
